added text and basic layout

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
+
   <link rel="stylesheet" href="portfolio.css" media="screen" title="no title">
   <meta charset="utf-8">
   <title>Monica Aguinaga | Multi-passionate creative human.</title>
 </head>
 <body>
-  <div> <!-- opening tag for main -->
+  <div id="contact"> <!-- opening tag for main -->
   <h1>Monica Aguiñaga</h1>
   <ul>
     <li>hello@monica-aguinaga.com</li>
@@ -23,26 +25,16 @@
       it allows me to pursue both of my passions: design and technology.
       I am now attending Wyncode Academy web immersive bootcamp, with the intention
       to further develop my coding skills.
-      I have adopted Marie Forleo's motto "Everything is figure-out-able" as my own life mantra.
-      Besides computers, my interests include photography, cooking and traveling.
+      I have adopted <a href="http://www.marieforleo.com/">Marie Forleo's</a> motto "Everything is figure-out-able" as my own life mantra.
+      Besides computers, my interests include photography, cooking and traveling.</br>
       Currently, I reside in Miami Beach, FL.
     </p>
     </div> <!--end of tag for bio-->
   </div> <!-- end tag for main -->
 
 
-  <div> <!-- opening tag for social media -->
-      <h2>Find me online</h2>
-  <ul>
-    <li>GitHub</li>
-    <li>Twitter</li>
-    <li>LinkedIn</li>
-  </ul>
 
-  </div> <!-- end tag for social  media -->
-
-
-  <div>  <!-- opening tag for projects-->
+  <div id="projects">  <!-- opening tag for projects-->
     <h2>Recent Projects</h2>
     <ul>
       <li>Project 1</li>
@@ -51,6 +43,17 @@
     </ul>
 
   </div> <!-- end tag for projects-->
+
+  <div id="socialmedia"> <!-- opening tag for social media -->
+      <h2>Find me online</h2>
+  <ul>
+    <li><a href="https://github.com/monicaaguinaga">GitHub</a></li>
+    <li><a href="https://twitter.com/maguinagah">Twitter</a></li>
+    <li><a href="https://www.linkedin.com/in/monicaaguinaga">LinkedIn</a></li>
+
+  </ul>
+
+  </div> <!-- end tag for social  media -->
 
 
 </body>
