--- a/portfolio.html
+++ b/portfolio.html
@@ -9,64 +9,66 @@
 </head>
 <body>
   <div id="welcome"> <!-- opening tag for welcome -->
-  <h1>I'm Monica Aguiñaga. </h1>
+    <h1>  Hi. I'm Monica Aguiñaga. </h1>
 
 
 
     <div id="bio">
 
-    <p>
-      Here's a brief summary of who I am. Born and raised in Mexico,
-      I immigrated to the United States in my early twenties. With a background
-      in design and photography, I developed an interest in web development, since
-      it allows me to pursue both of my passions: design and technology.
-      I am now attending Wyncode Academy web immersive bootcamp, with the intention
-      to further develop my coding skills.
-      I have adopted <a href="http://www.marieforleo.com/">Marie Forleo's</a> motto
-       "Everything is figure-out-able" as my own life mantra.
-      Besides computers, my interests include photography, cooking and traveling.</br>
-      Currently, I reside in Miami Beach, FL.
-    </p>
+      <p>
+        Here's a brief summary of who I am. Born and raised in Mexico,
+        I immigrated to the United States in my early twenties. With a background
+        in design and photography, I developed an interest in web development, since
+        it allows me to pursue both of my passions: design and technology.
+        I am now attending Wyncode Academy web immersive bootcamp, with the intention
+        to further develop my coding skills.
+        I have adopted <a href="http://www.marieforleo.com/">Marie Forleo's</a> motto
+        "Everything is figure-out-able" as my own life mantra.
+        Besides computers, my interests include photography, cooking and traveling.</br>
+        Currently, I reside in Miami Beach, FL.
+      </p>
     </div> <!--end of tag for bio-->
   </div> <!-- end tag for welcome -->
-
+  <h2>Recent Projects</h2>
 
 
   <div id="projects">  <!-- opening tag for projects-->
-    <h2>Recent Projects</h2>
+
     <ul>
       <li>
         <h3>New York through my lens</h3>
         <a href="http://newyorkthroughmylens.tumblr.com/">
-          <img src="images/newyork.png" alt="Homepage for New York through my lens tumblr"></a></li>
-      <li>
-        <h3>Monica Aguinaga Preset Shop</h3>
-        <a href="http://monicaaguinaga.bigcartel.com/">
-          <img src="images/presetshop.png" alt="Homepage for Monica Aguinaga online preset shop"></a></li>
-      <li>
-        <h3>Filter Grade</h3>
-        <a href="https://filtergrade.com/product-tag/monica-aguinaga/">
-          <img src="images/filtergrade.png" alt="Filter Grade site"></a></li>
+          <img src="images/newyork.png" alt="Homepage for New York through my lens tumblr"></a>
+        </li>
+        <li>
+          <h3>Monica Aguinaga Preset Shop</h3>
+          <a href="http://monicaaguinaga.bigcartel.com/">
+            <img src="images/presetshop.png" alt="Homepage for Monica Aguinaga online preset shop"></a>
+          </li>
+          <li>
+            <h3>Filter Grade</h3>
+            <a href="https://filtergrade.com/product-tag/monica-aguinaga/">
+              <img src="images/filtergrade.png" alt="Filter Grade site"></a>
+            </li>
     </ul>
-
   </div> <!-- end tag for projects-->
 
-    <ul id="contact">
-      <li>hello@monica-aguinaga.com</li>
-      <li>786.562.6979</li>
-    </ul>
+        <ul id="contact">
+          <li>hello@monica-aguinaga.com</li>
+          <li>786.562.6979</li>
+        </ul>
 
-  <div id="socialmedia"> <!-- opening tag for social media -->
+        <div id="socialmedia"> <!-- opening tag for social media -->
 
-  <ul>
-    <li><a href="https://github.com/monicaaguinaga"><img src="images/github.png"></a></li>
-    <li><a href="https://twitter.com/maguinagah"><img src="images/twitter.png"></a></li>
-    <li><a href="https://www.linkedin.com/in/monicaaguinaga"><img src="images/linkedin.png"></a></li>
+          <ul>
+            <li><a href="https://github.com/monicaaguinaga"><img src="images/github.png"></a></li>
+            <li><a href="https://twitter.com/maguinagah"><img src="images/twitter.png"></a></li>
+            <li><a href="https://www.linkedin.com/in/monicaaguinaga"><img src="images/linkedin.png"></a></li>
 
-  </ul>
-  <p class="credit">Icons by Andrey Vasilyev and Yamini Ahluwalia</p>
-  </div> <!-- end tag for social  media -->
+          </ul>
+          <p class="credit">Icons by Andrey Vasilyev and Yamini Ahluwalia</p>
+        </div> <!-- end tag for social  media -->
 
 
-</body>
-</html>
+      </body>
+      </html>
