--- a/portfolio.html
+++ b/portfolio.html
@@ -61,9 +61,9 @@
         <div id="socialmedia"> <!-- opening tag for social media -->
 
           <ul>
-            <li><a href="https://github.com/monicaaguinaga"><img src="images/github.png"></a></li>
-            <li><a href="https://twitter.com/maguinagah"><img src="images/twitter.png"></a></li>
-            <li><a href="https://www.linkedin.com/in/monicaaguinaga"><img src="images/linkedin.png"></a></li>
+            <li><a href="https://github.com/monicaaguinaga"><img src="images/github.png" alt="Github profile"></a></li>
+            <li><a href="https://twitter.com/maguinagah"><img src="images/twitter.png" alt="Twitter Profile>"></a></li>
+            <li><a href="https://www.linkedin.com/in/monicaaguinaga"><img src="images/linkedin.png" alt ="Linkedin Profile"></a></li>
 
           </ul>
           <p class="credit">Icons by Andrey Vasilyev and Yamini Ahluwalia</p>
