My site on Heroku

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -24,7 +24,7 @@
         to further develop my coding skills.
         I have adopted <a href="http://www.marieforleo.com/">Marie Forleo's</a> motto
         "Everything is figure-out-able" as my own life mantra.
-        Besides computers, my interests include photography, cooking and traveling.</br>
+        Besides computers, my interests include photography, cooking and traveling.
         Currently, I reside in Miami Beach, FL.
       </p>
     </div> <!--end of tag for bio-->
@@ -47,8 +47,9 @@
           </li>
           <li>
             <h3>Filter Grade</h3>
+
             <a href="https://filtergrade.com/product-tag/monica-aguinaga/">
-              <img src="images/filtergrade.png" alt="Filter Grade site"></a>
+              <img src="./images/filtergrade.png" alt="Filter Grade site"></a>
             </li>
     </ul>
   </div> <!-- end tag for projects-->
@@ -61,12 +62,14 @@
         <div id="socialmedia"> <!-- opening tag for social media -->
 
           <ul>
-            <li><a href="https://github.com/monicaaguinaga"><img src="images/github.png" alt="Github profile"></a></li>
-            <li><a href="https://twitter.com/maguinagah"><img src="images/twitter.png" alt="Twitter Profile>"></a></li>
-            <li><a href="https://www.linkedin.com/in/monicaaguinaga"><img src="images/linkedin.png" alt ="Linkedin Profile"></a></li>
+            <li><a href="https://github.com/monicaaguinaga"><img src="./images/github.png" alt="Github profile"></a></li>
+            <li><a href="https://twitter.com/maguinagah"><img src="./images/twitter.png" alt="Twitter Profile>"></a></li>
+            <li><a href="https://www.linkedin.com/in/monicaaguinaga"><img src="./images/linkedin.png" alt ="Linkedin Profile"></a></li>
 
           </ul>
-          <p class="credit">Icons by Andrey Vasilyev and Yamini Ahluwalia</p>
+
+          <p class="credit">Photo credit: David Collado. Icons by Andrey Vasilyev and Yamini Ahluwalia.</p>
+
         </div> <!-- end tag for social  media -->
 
 
