--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="welcome"> <!-- opening tag for welcome -->
-    <h1>  Hi. I'm Monica Aguiñaga. </h1>
+    <h1>  Hi! I'm Monica Aguiñaga. </h1>
 
 
 
